# libws

./: .gitmodules  CMakeLists.txt  README.md  ws.c  ws.h  ws.h.cmake
.github/workflows/: CI.yml  CI_docs.yml
cmake/Modules/: ConfigureChecks.cmake  FindLibWebSockets.cmake
docs/: CMakeLists.txt  changelog.rst  conf.py  examples.rst  index.rst  intro.rst
docs/api/: defines.rst  functions.rst  structures.rst
docs/api/defines/: libws_free.rst  libws_major_version.rst  libws_malloc.rst  libws_minor_version.rst  libws_patch_version.rst
docs/api/functions/: ws_connect.rst  ws_delete.rst  ws_listen.rst  ws_receive.rst  ws_send.rst
docs/api/structures/: ws.rst  ws_client.rst  ws_connect_options.rst  ws_hooks.rst  ws_listen_options.rst
tests/: CMakeLists.txt  test_config.h  test_ws.c
